CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_respbl_party_hist__x/sfrosit_t_adjmt_respbl_party_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_adjmt_respbl_party_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_adjmt_respbl_party_hist</externalName>
    <label>Adjustment Responsible Party History</label>
    <pluralLabel>Adjustment Responsible Party History</pluralLabel>
</CustomObject>