CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_respbl_party_hist__x/fields/idn_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_adjmt__c</fullName>
    <description>idn_adjmt</description>
    <externalDeveloperName>idn_adjmt</externalDeveloperName>
    <label>adjustment id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>