CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_respbl_party_hist__x/fields/idn_client__c.field-meta.xml
<CustomField>
    <fullName>idn_client__c</fullName>
    <description>idn_client</description>
    <externalDeveloperName>idn_client</externalDeveloperName>
    <label>Individual id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>