CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_respbl_party_hist__x/fields/idn_party_respbl_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_party_respbl_adjmt__c</fullName>
    <description>idn_party_respbl_adjmt</description>
    <externalDeveloperName>idn_party_respbl_adjmt</externalDeveloperName>
    <label>Responsible Party Adjustment ID</label>
    <length>50</length>
    <referenceTargetField>T_ADJMT_RESPBL_PARTY__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_ADJMT_RESPBL_PARTY__c</referenceTo>
    <relationshipLabel>Adjustment Responsible Party Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_adjmt_respbl_party_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>