CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_respbl_party_hist__x/fields/idn_party_respbl_adjmt_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_party_respbl_adjmt_hist__c</fullName>
    <description>idn_party_respbl_adjmt_hist</description>
    <externalDeveloperName>idn_party_respbl_adjmt_hist</externalDeveloperName>
    <label>History ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>